ibm-cloud/chat-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-client
spec:
  replicas: 5
  template:
    spec:
      containers:
      - image: 
        name: hello-world
        ports:
        - containerPort: 8080
