ibm-cloud/inserter-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: delayed-inserter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: delayed-inserter
    spec:
      containers: 
      - name: delayed-inserter
        image: juchiast/delayed-inserter:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
