ibm-cloud/rest-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rest-in-peace
spec:
  replicas: 8
  template:
    metadata:
      labels:
        app: rest-in-peace
    spec:
      containers: 
      - name: rest-in-peace
        image: juchiast/rest-in-peace:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
