ibm-cloud/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-client
  labels:
    app: chat-client
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: chat-client
