ibm-cloud/inserter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delayed-inserter
  labels:
    app: delayed-inserter
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: delayed-inserter
