ibm-cloud/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-in-peace
  labels:
    app: rest-in-peace
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: rest-in-peace
